Fixed breadcrumb throughout, fixed look of the bottom tp top, fixed changes nedded for menu, fixed alignment in team, fixed logo, added lightbox, added slider images, added logo image,

--- a/templates/it_oxygen/custom/scss/components/_breadcrumb.scss
+++ b/templates/it_oxygen/custom/scss/components/_breadcrumb.scss
@@ -86,7 +86,6 @@
 .contacus-page {
   #g-breadcrumb {
     background-image: none;
-    margin-left: 45px;
     padding: 20px 0 30px;
 
     .g-content {
