--- a/templates/it_oxygen/custom/scss/components/_fa.scss
+++ b/templates/it_oxygen/custom/scss/components/_fa.scss
@@ -40,3 +40,18 @@
 //    }
 //  }
 //}
+
+
+
+body #g-to-top .style1 #g-totop-button {
+  background-color: $sub-menu-color;
+
+  &:hover,
+  &:focus {
+    background-color: $sub-menu-color-hover;
+  }
+}
+
+.fa.fa-angle-up {
+  font-size: 30px;
+}
