--- a/templates/it_oxygen/custom/scss/components/_menu.scss
+++ b/templates/it_oxygen/custom/scss/components/_menu.scss
@@ -126,7 +126,9 @@
 
   .g-sublevel {
     li {
-      background-color: rgba(97, 133, 50, .7);
+
+
+      background-color: rgba(77, 77, 77, .7);
       border-right: none;
       margin: 0 !important;
       padding: 0;
@@ -144,9 +146,21 @@
 
         &:hover,
         &:focus {
-          background-color: rgba(87, 119, 45, .3)
+          background-color: rgba(50,50,50, .3)
         }
       }
+    }
+  }
+}
+
+// Especial case: Only for bike page
+.page-bike #g-header .g-main-nav .g-dropdown .g-sublevel li{
+  background-color: rgba(97, 133, 50, .7);
+
+  a {
+    &:hover,
+    &:focus {
+      background-color: rgba(87, 119, 45, .3)
     }
   }
 }
