--- a/templates/it_oxygen/custom/scss/components/_team.scss
+++ b/templates/it_oxygen/custom/scss/components/_team.scss
@@ -19,7 +19,7 @@
       font-size: 32px;
       font-weight: 400;
       line-height: 30px;
-      margin: 50px 0 40px 25px;
+      margin: 50px 0 40px 0;
       padding: 5px 10px;
 
     }
