--- a/templates/it_oxygen/custom/scss/layout/_fullwidth.scss
+++ b/templates/it_oxygen/custom/scss/layout/_fullwidth.scss
@@ -7,9 +7,39 @@
   min-height: 600px;
   padding: 0;
 
+  > .g-container {
+    margin: 0 auto;
+  }
+
   .g-block.size-50:first-child {
     padding-right: 25px;
 
+    .g-content {
+      width: 100%;
+      float: right;
+
+      @media only screen and (min-width: 320px) and (max-width: 767px) {
+        width: 95%;
+        margin: 0 auto;
+      }
+      
+      @media only screen and (min-width: 768px) and (max-width: 960px) {
+        width: 768px;
+        margin: 0 auto;
+        float: none;
+        padding-left: 0;
+      }
+
+      @media only screen and (min-width: 961px) and (max-width: 1200px) {
+        width: 455px;
+        float: right;
+      }
+
+      @media only screen and (min-width: 1200px) {
+        width: 555px;
+      }
+    }
+    
     .platform-content {
       padding: 40px 0 15px;
     }
